[gd_scene load_steps=25 format=3 uid="uid://to3sdmfn88t1"]

[ext_resource type="Script" uid="uid://d2uhjkh6pvk8l" path="res://scripts/main_menu.gd" id="1_rbs56"]
[ext_resource type="Texture2D" uid="uid://k815sqnqrbpg" path="res://Sprites/32circle.png" id="2_rtsuv"]
[ext_resource type="FontFile" uid="uid://0v7x8i437x5i" path="res://fonts/pixel.ttf" id="3_2rquh"]
[ext_resource type="Script" uid="uid://bacs6jpxrgy24" path="res://scripts/buttonScripts/buttonGeneral.gd" id="5_6fjaf"]
[ext_resource type="Script" uid="uid://cib8b5gqy527h" path="res://scripts/buttonScripts/start_button.gd" id="5_yx1sr"]
[ext_resource type="Script" uid="uid://c83pjqwlrq8xq" path="res://scripts/buttonScripts/options_button.gd" id="6_ipxnb"]
[ext_resource type="Script" uid="uid://bmj2a8xy1v5j4" path="res://scripts/buttonScripts/credits_button.gd" id="7_hxyg5"]
[ext_resource type="Script" uid="uid://cm37m4tt2v8vi" path="res://scripts/buttonScripts/quit_buttonmenu.gd" id="8_t54ei"]
[ext_resource type="Script" uid="uid://dsql4ptngd5gf" path="res://scenes/rooms/credits_animation.gd" id="9_ipxnb"]
[ext_resource type="Texture2D" uid="uid://bwnn32oh22gbd" path="res://Sprites/green_ring.png" id="10_exhbh"]
[ext_resource type="Script" uid="uid://bqdda6p246nlx" path="res://scripts/game_controller.gd" id="10_hxyg5"]
[ext_resource type="Texture2D" uid="uid://pgiflukjxlgq" path="res://Sprites/ring.png" id="10_orv06"]
[ext_resource type="Texture2D" uid="uid://cw8u83w3iji8b" path="res://Sprites/spaceshooterlogo.svg" id="11_t54ei"]
[ext_resource type="Texture2D" uid="uid://d3wk7koh5x0hn" path="res://Sprites/sPlayer.png" id="12_kputg"]

[sub_resource type="Gradient" id="Gradient_am2me"]
offsets = PackedFloat32Array(0.004310345, 0.5948276, 1)
colors = PackedColorArray(0.0026324103, 0.0026324103, 0.0026324103, 0.6, 0.91351753, 0.91351753, 0.91351753, 1, 1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yx1sr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ipxnb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hxyg5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t54ei"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kputg"]

[sub_resource type="Animation" id="Animation_ipxnb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/RichTextLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 180)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Control/quitButton:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Control/startButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Control/optionsButton:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Control/creditsButton:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/RichTextLabel:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/TextureProgressBar:value")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasLayer/Label:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_yx1sr"]
resource_name = "credits"
length = 31.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3, 30, 31),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.47843137), Color(0, 0, 0, 0.47843137), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/RichTextLabel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 180), Vector2(0, -200)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Control/quitButton:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Control/startButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Control/optionsButton:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Control/creditsButton:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/RichTextLabel:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_hxyg5"]
resource_name = "end"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.47843137), Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Control/quitButton:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Control/creditsButton:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Control/optionsButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Control/startButton:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/RichTextLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hxyg5"]
_data = {
&"RESET": SubResource("Animation_ipxnb"),
&"credits": SubResource("Animation_yx1sr"),
&"end": SubResource("Animation_hxyg5")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_rbs56")

[node name="stars" type="Node2D" parent="."]

[node name="Stars" type="CPUParticles2D" parent="stars"]
position = Vector2(336, 89.00001)
scale = Vector2(0.006041211, 0.78060913)
amount = 500
texture = ExtResource("2_rtsuv")
lifetime = 110.0
speed_scale = 5.0
lifetime_randomness = 0.55
fixed_fps = 30
draw_order = 1
emission_shape = 3
emission_rect_extents = Vector2(1, 150)
direction = Vector2(-100, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 650.0
initial_velocity_max = 750.0
scale_amount_min = 0.0
scale_amount_max = 0.03
color_initial_ramp = SubResource("Gradient_am2me")

[node name="Stars2" type="CPUParticles2D" parent="stars"]
position = Vector2(162, 94)
scale = Vector2(0.006125344, 0.7733686)
emitting = false
amount = 700
texture = ExtResource("2_rtsuv")
lifetime = 110.0
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
lifetime_randomness = 0.55
fixed_fps = 30
emission_shape = 3
emission_rect_extents = Vector2(30000.03, 150)
direction = Vector2(-100, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 650.0
initial_velocity_max = 700.0
scale_amount_min = 0.0
scale_amount_max = 0.03
color_initial_ramp = SubResource("Gradient_am2me")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 104.0
offset_right = 43.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 0

[node name="startButton" type="Button" parent="Control"]
clip_contents = true
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 52.0
offset_bottom = 15.0
pivot_offset = Vector2(0, 5)
theme_override_colors/font_color = Color(0.52114034, 0.52114064, 0.5211405, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.38928655, 0.38928664, 0.3892865, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.3882353, 0.3882353, 0.3882353, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_2rquh")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_yx1sr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ipxnb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hxyg5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_t54ei")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kputg")
text = "Start Game"
flat = true
alignment = 0
script = ExtResource("5_6fjaf")
mainButton = true
horizontalAlign = 0
actionScript = ExtResource("5_yx1sr")

[node name="optionsButton" type="Button" parent="Control"]
clip_contents = true
layout_mode = 0
offset_left = 4.0
offset_top = 19.0
offset_right = 36.0
offset_bottom = 29.0
pivot_offset = Vector2(0, 5)
theme_override_colors/font_color = Color(0.52114034, 0.52114064, 0.5211405, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.38928655, 0.38928664, 0.3892865, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.3882353, 0.3882353, 0.3882353, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_2rquh")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_yx1sr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ipxnb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hxyg5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_t54ei")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kputg")
text = "Options"
flat = true
alignment = 0
script = ExtResource("5_6fjaf")
horizontalAlign = 0
actionScript = ExtResource("6_ipxnb")

[node name="creditsButton" type="Button" parent="Control"]
clip_contents = true
layout_mode = 0
offset_left = 4.0
offset_top = 33.0
offset_right = 36.0
offset_bottom = 43.0
pivot_offset = Vector2(0, 5)
theme_override_colors/font_color = Color(0.52114034, 0.52114064, 0.5211405, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.38928655, 0.38928664, 0.3892865, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.3882353, 0.3882353, 0.3882353, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_2rquh")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_yx1sr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ipxnb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hxyg5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_t54ei")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kputg")
text = "Credits"
flat = true
alignment = 0
script = ExtResource("5_6fjaf")
horizontalAlign = 0
actionScript = ExtResource("7_hxyg5")

[node name="quitButton" type="Button" parent="Control"]
clip_contents = true
layout_mode = 0
offset_left = 4.0
offset_top = 47.0
offset_right = 20.0
offset_bottom = 57.0
pivot_offset = Vector2(0, 5)
theme_override_colors/font_color = Color(0.52114034, 0.52114064, 0.5211405, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.38928655, 0.38928664, 0.3892865, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.3882353, 0.3882353, 0.3882353, 1)
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_2rquh")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_yx1sr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ipxnb")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hxyg5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_t54ei")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kputg")
text = "Quit"
flat = true
alignment = 0
script = ExtResource("5_6fjaf")
horizontalAlign = 0
actionScript = ExtResource("8_t54ei")

[node name="made by" type="RichTextLabel" parent="."]
offset_left = 263.0
offset_top = 170.0
offset_right = 436.0
offset_bottom = 190.0
scale = Vector2(0.3, 0.3)
theme_override_fonts/normal_font = ExtResource("3_2rquh")
bbcode_enabled = true
text = "Made by DaniNocchi"
fit_content = true
scroll_active = false
autowrap_mode = 0
autowrap_trim_flags = 0
horizontal_alignment = 2

[node name="version" type="RichTextLabel" parent="."]
offset_left = 5.0
offset_top = 170.0
offset_right = 143.0
offset_bottom = 190.0
scale = Vector2(0.3, 0.3)
theme_override_fonts/normal_font = ExtResource("3_2rquh")
bbcode_enabled = true
text = "Version 2.0.0"
fit_content = true
scroll_active = false
autowrap_mode = 0
autowrap_trim_flags = 0

[node name="creditsAnimation" type="Node2D" parent="."]
script = ExtResource("9_ipxnb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="creditsAnimation"]
libraries = {
&"": SubResource("AnimationLibrary_hxyg5")
}

[node name="CanvasLayer" type="CanvasLayer" parent="creditsAnimation"]

[node name="ColorRect" type="ColorRect" parent="creditsAnimation/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="RichTextLabel" type="RichTextLabel" parent="creditsAnimation/CanvasLayer"]
offset_top = 180.0
offset_right = 320.0
offset_bottom = 374.99774
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_2rquh")
bbcode_enabled = true
text = "SPACE SHOOTER
[font_size=8]



Developer - DaniNocchi
Audio - DaniNocchi
Music - TalonTrueBlood

[font_size=10]
Special Thanks[font_size=8]
All my friends that tested the game


Yes, DaniNocchi (Me) did basically everything.

Actually, I did the game all by myself
since the first version of it.
"
scroll_active = false
horizontal_alignment = 1

[node name="Label" type="Label" parent="creditsAnimation/CanvasLayer"]
modulate = Color(1, 1, 1, 0)
offset_left = 266.0
offset_top = 6.0
offset_right = 347.0
offset_bottom = 26.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("3_2rquh")
text = "Skipping..."
horizontal_alignment = 1

[node name="TextureProgressBar" type="TextureProgressBar" parent="creditsAnimation/CanvasLayer"]
offset_left = 302.0
offset_top = 3.0000002
offset_right = 602.0
offset_bottom = 303.0
scale = Vector2(0.05, 0.05)
max_value = 3.0
step = 0.0
value = 3.0
fill_mode = 5
texture_under = ExtResource("10_exhbh")
texture_progress = ExtResource("10_orv06")

[node name="gameController" type="Node2D" parent="."]
script = ExtResource("10_hxyg5")

[node name="Spaceshooterlogo" type="Sprite2D" parent="."]
position = Vector2(73, 48.000004)
scale = Vector2(0.10579344, 0.105793454)
texture = ExtResource("11_t54ei")

[node name="SPlayer" type="Sprite2D" parent="."]
position = Vector2(73, 42)
rotation = -1.5707964
scale = Vector2(1.5874317, 1.5874317)
texture = ExtResource("12_kputg")

[connection signal="button_up" from="Control/optionsButton" to="Control/optionsButton" method="_on_button_up"]
[connection signal="focus_entered" from="Control/optionsButton" to="Control/optionsButton" method="_on_focus_entered"]
[connection signal="focus_exited" from="Control/optionsButton" to="Control/optionsButton" method="_on_focus_exited"]
[connection signal="gui_input" from="Control/optionsButton" to="Control/optionsButton" method="_on_gui_input"]
[connection signal="mouse_entered" from="Control/optionsButton" to="Control/optionsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Control/optionsButton" to="Control/optionsButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Control/optionsButton" to="Control/optionsButton" method="_on_pressed"]
[connection signal="button_up" from="Control/creditsButton" to="Control/creditsButton" method="_on_button_up"]
[connection signal="focus_entered" from="Control/creditsButton" to="Control/creditsButton" method="_on_focus_entered"]
[connection signal="focus_exited" from="Control/creditsButton" to="Control/creditsButton" method="_on_focus_exited"]
[connection signal="gui_input" from="Control/creditsButton" to="Control/creditsButton" method="_on_gui_input"]
[connection signal="mouse_entered" from="Control/creditsButton" to="Control/creditsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Control/creditsButton" to="Control/creditsButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Control/creditsButton" to="Control/creditsButton" method="_on_pressed"]
[connection signal="button_up" from="Control/quitButton" to="Control/quitButton" method="_on_button_up"]
[connection signal="focus_entered" from="Control/quitButton" to="Control/quitButton" method="_on_focus_entered"]
[connection signal="focus_exited" from="Control/quitButton" to="Control/quitButton" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Control/quitButton" to="Control/quitButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Control/quitButton" to="Control/quitButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Control/quitButton" to="Control/quitButton" method="_on_pressed"]
